Fix footer position and buttons overlapping

--- a/src/styles/cart-page.css
+++ b/src/styles/cart-page.css
@@ -14,6 +14,11 @@ th {
   cursor: pointer;
 }
 
+.cart__page-btn {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
 .cart__page-btn button a:hover {
   color: #fff;
 }
